# phramai

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  README.md  agents.md  docker-compose.yml  test_spec.txt
.github/workflows/: deploy.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-deps-install.txt  task-2-docs-validation.txt  task-3-model.txt  task-3-schemas.txt  task-4-api-key.txt  task-4-security-check.txt
.sisyphus/notepads/pharma-ai-docker/: learnings.md
.sisyphus/notepads/rag-tests/: learnings.md
.sisyphus/plans/: pharma-rag-assistant.md
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  test.db
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/endpoints/: chat.py  documents.py  rag.py
backend/app/core/: api_key.py  config.py  rate_limit.py
backend/app/db/: database.py
backend/app/models/: __init__.py  chat_session.py  document.py  query_log.py
backend/app/repositories/: chat_repository.py  document_repository.py  query_log_repository.py
backend/app/schemas/: chat.py  document.py  rag.py
backend/app/services/: blob_service.py  chat_service.py  document_service.py  pdf_service.py  rag_service.py  seed_service.py
backend/test_docs/: clinical_trials.txt  drug_approval_process.txt  gmp_guidelines.txt
backend/tests/: conftest.py  test_rag.py
frontend/: .dockerignore  Dockerfile  README.md  components.json  next.config.ts  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: component-example.tsx
frontend/services/: api.ts
(+21 files in other folders)
